Last correction with markups for Dr. Schott, before submit to committee...

--- a/Acronyms.tex
+++ b/Acronyms.tex
@@ -75,3 +75,5 @@
 \newacronym{aviris}{AVIRIS}{Airborne Visible/InfraRed Imaging Spectrometer}
 
 \newacronym{matlab}{MATLAB}{Matrix Laboratory}
+
+\newacronym{modtran}{MODTRAN}{MODerate resolution atmospheric TRANsmission}
