--- a/Background_and_Theory.tex
+++ b/Background_and_Theory.tex
@@ -91,7 +91,7 @@ So, the $E_S'$ is calculated assuming that the flux $\Phi$ comes from a point so
 % ----------------------------------------------------
 \subsubsection{Solar Energy Paths}
 \label{subsubsec:SolarPaths}
-The main goal of remote sensing is to extract information about a specific target from all information recorded by an imaging system. In order to only isolate the target information from the rest of the recorded information, we need first to understand what kinds of energy are recorded by the sensor (a satellite is this case). Conceptually, we will separate the information recorded into energy paths, as described by \cite{Schott}. The energy paths, or electromagnetic energy, most influential in the $0.4-2.5\mu m$ spectral region are the solar energy paths (a.k.a. reflective paths), which are followed by radiation energy originated from the sun that could reach the satellite camera. \autoref{fig:paths} shows the most significant solar energy paths. The type A photons in the figure originate in the sun, pass through the atmosphere, reflect off the target on Earth's surface, and propagate through the atmosphere in the direction of the sensor. This is the path that carries information about the target of interest. Type B photons in the figure are photons originating in the sun, scattered by the atmosphere in the direction of the target, and are then reflected by the target in the direction of the sensor. These photons are referred to as {\it skylight}\index{skylight} or {\it sky shine}. Type C is another group of photons that are significant in total signal recorded by the sensor. These photons originate in the sun, and are scattered by the atmosphere into the camera's line of sight, without ever interacting with the target. This path is referred as {\it upwelled radiance}\index{radiance!upwelled}, and it is a function of how ``hazy'' the atmosphere is.
+The main goal of remote sensing is to extract information about a specific target from all information recorded by an imaging system. In order to only isolate the target information from the rest of the recorded information, we need first to understand what kinds of energy are recorded by the sensor (a satellite is this case). Conceptually, we will separate the information recorded into energy paths, as described by \cite{Schott}. The energy paths, or electromagnetic energy, most influential in the $0.4-2.5\mu m$ spectral region are the solar energy paths (a.k.a. reflective paths), which are followed by radiation that originated from the sun that could reach the satellite camera. \autoref{fig:paths} shows the most significant solar energy paths. The type A photons in the figure originate in the sun, pass through the atmosphere, reflect off the target on Earth's surface, and propagate through the atmosphere in the direction of the sensor. This is the path that carries information about the target of interest. Type B photons in the figure are photons originating in the sun, scattered by the atmosphere in the direction of the target, and are then reflected by the target in the direction of the sensor. These photons are referred to as {\it skylight}\index{skylight} or {\it sky shine}. Type C is another group of photons that are significant in total signal recorded by the sensor. These photons originate in the sun, and are scattered by the atmosphere into the camera's line of sight, without ever interacting with the target. This path is referred as {\it upwelled radiance}\index{radiance!upwelled}, and it is a function of how ``hazy'' the atmosphere is.
 
 Another photon path that could be added to the total signal is the photons that originate in the sun, propagate to the atmosphere, reflect off background objects in the direction of the target and are then reflected from the target of interest back through the atmosphere to the sensor. These photons are labeled as type G photons in \autoref{fig:paths}. As you can see, this path involves multiple reflection or bounces of the photons. 
 
@@ -377,7 +377,7 @@ Because water is a dynamic body, variables such as wind and tidal forces can cha
 % ----------------------------------------------------
 \subsubsection*{Sun Glint}
 \addcontentsline{toc}{subsubsection}{Sun Glint}
-The water-leaving reflectance could be contaminated by glint effects which are a product of sun light reflected off the air-water surface. There will be a bigger chance of having more glint-contaminated pixels when high spatial details are imaged by the sensor. For instance, Landsat 8's $30m$ pixels will captured more glint than MODIS' $1km$ pixels. It is important to note that the image-derived surface reflectance of the contaminated areas with the sun glint will closely resemble the solar spectrum (or ``white light''). This fact produces \gls{nir} and \gls{swir} pixels that appear brighter than common water pixels. Different algorithms have been developed to correct images for sun glint (glint removal). Most of these algorithms are based upon the concept that water-leaving radiance is zero beyond the NIR, and therefore any contribution is due to sun glint \cite{Pahlevan:2012}. An example of these algorithms is described in \S\ref{subsec:glintremoval}. Another way to detect sun-glint contaminated areas is a simple band ratio between the SWIR bands, which will reveal atmospheric fronts, cloud coverage and/or low fog conditions \cite{Pahlevan:2012}.
+The water-leaving reflectance could be contaminated by glint effects which are a product of sun light reflected off the air-water surface. \todo{Dr. Schott: Check this sentence!}For a high spatial resolution sensor like Landsat 8, the solar glint will be more dominant in a localized region and it could strongly contaminate one of many pixels, as opposed to lower spatial resolution sensor in which the solar glint will contaminate a larger area but averaging across the complete pixel. It is important to note that the image-derived surface reflectance of the contaminated areas with the sun glint will closely resemble the solar spectrum (or ``white light''). This fact produces \gls{nir} and \gls{swir} pixels that appear brighter than common water pixels. Different algorithms have been developed to correct images for sun glint (glint removal). Most of these algorithms are based upon the concept that water-leaving radiance is zero beyond the NIR, and therefore any contribution is due to sun glint \cite{Pahlevan:2012}. An example of these algorithms is described in \S\ref{subsec:glintremoval}. Another way to detect sun-glint contaminated areas is a simple band ratio between the SWIR bands, which will reveal atmospheric fronts, cloud coverage and/or low fog conditions \cite{Pahlevan:2012}.
 % ----------------------------------------------------
 \subsubsection*{Sky Glint}
 \addcontentsline{toc}{subsubsection}{Sky Glint}
