--- a/Methodology.tex
+++ b/Methodology.tex
@@ -554,7 +554,7 @@ As an example, \autoref{fig:ELMpxsENVI} shows the different spectra used to perf
 \label{subsec:gordon}
 The following algorithm is based in the method developed by \cite{Gordon:1994}\index{atmospheric correction!Gordon and Wang method} for retrieval of water-leaving radiance and aerosol optical thickness over the oceans with \gls{seawifs}. The method developed by \cite{Gordon:1994} is still applied to the basic SeaWiFS and \gls{modis} atmospheric correction algorithms for Case 1 water \cite{IOCCG:2010}.
 
-The first step in this algorithm is performing a Rayleigh scattering correction, which means to subtract the reflectance due to Rayleigh scatter $\rho_r$ from the total TOA reflectance $\rho_t$ in \autoref{eq:rhodeglint}. In the SeaWiFS/MODIS algorithm, the Rayleigh scatter component is computed from the Rayleigh LUTs, which were calculated using the vector radiative transfer theory \cite{Wang:1991,IOCCG:2010}. For this work, this Rayleigh scattering component $\rho_r$ could be calculated directly from MODTRAN for the particular illumination and viewing geometry of the sun and the sensor in multiple-scatter mode but without aerosol. In the SeaWiFS/MODIS atmospheric correction algorithm, the whitecap reflectance $\rho_{wc}(\lambda)$ (including glint) is modeled using input of the sea surface wind speed, and the TOA sun glint component is mostly masked out \cite{IOCCG:2010}. After calculating this Rayleigh scatter and whitecap component, \autoref{eq:rhodeglint} becomes 
+The first step in this algorithm is performing a Rayleigh scattering correction, which means to subtract the reflectance due to Rayleigh scatter $\rho_r$ from the total TOA reflectance $\rho_t$ in \autoref{eq:rhodeglint}. In the SeaWiFS/MODIS algorithm, the Rayleigh scatter component is computed from the Rayleigh LUTs, which were calculated using the vector radiative transfer theory \cite{Wang:1991,IOCCG:2010}. \todo{Dr. Schott: check these two sentences}For this work, one alternative could have been to calculate this Rayleigh scattering component $\rho_r$ directly from the \gls{modtran} software for the particular illumination and viewing geometry of the sun and the sensor in multiple-scatter mode but without aerosol. \gls{modtran} is a computer program designed to model atmospheric propagation of electromagnetic radiation \cite{Berk:1989fk}\index{MODTRAN} (more info: \url{http://www.modtran5.com/}). It was decided to use the \gls{seadas} tool instead, which has the atmospheric LUTs built-in. In the SeaWiFS/MODIS atmospheric correction algorithm, the whitecap reflectance $\rho_{wc}(\lambda)$ (including glint) is modeled using input of the sea surface wind speed, and the TOA sun glint component is mostly masked out \cite{IOCCG:2010}. After calculating this Rayleigh scatter and whitecap component, \autoref{eq:rhodeglint} becomes 
 \begin{equation}\label{eq:rhodeRayliegh}
  \rho_c(\lambda) = \rho_t(\lambda)-\rho_r(\lambda)-T_v(\lambda)\rho_{wc}(\lambda) = \rho_a(\lambda)+\rho_{ra}(\lambda)+T_v(\lambda)\rho_{w}(\lambda)
 \end{equation}
