--- a/Summary.tex
+++ b/Summary.tex
@@ -23,9 +23,9 @@ The MoB-ELM algorithm was applied to {three \todo{three?}} Landsat 8 images in o
 
 % ----- added From SPIE SD
 % \subsection{Comparison with Standard Algorithms}
-For further validation, the \gls{mobelm} algorithm was compared with three algorithms utilizing the NASA's standard algorithms based on the methods developed by \cite{Gordon:1994}. The \gls{rrs} retrieved from these atmospheric correction algorithms were compared against each other. There are better agreements in band 3 and 4 than in bands 1 and 2 for all algorithms, which can be concluded from the RMSE values (\autoref{tab:Sites}). Also, the spectral \gls{rrs} from all four algorithms were compared with coincident {\it in situ} data. This comparison showed that the \gls{mobelm} algorithm perform the best overall.  When compared with {\it in situ} data, the MoB-ELM and Gordon and Wang's algorithm from SeaDAS (SeaDAS-SWIR) show similar results for all bands (\autoref{fig:NRMSE130919_RRS}). The results from the Gordon and Wang's algorithm from Acolite (Acolite-SWIR) shows the largest disagreement (\autoref{fig:NRMSE130919_RRS}). Then, the \gls{nrmse} for each band was calculated using the {\it in situ} data from the 09-19-2013 scene. Again, the \gls{mobelm} algorithm performs the best overall. \todo{include rest of the images in the NRMSE calculation for Rrs}.
+\todo{include rest of the images in the NRMSE calculation for Rrs}For further validation, the \gls{mobelm} algorithm was compared with three algorithms utilizing the NASA's standard algorithms based on the methods developed by \cite{Gordon:1994}. The \gls{rrs} retrieved from these atmospheric correction algorithms were compared against each other. There are better agreements in band 3 and 4 than in bands 1 and 2 for all algorithms, which can be concluded from the RMSE values (\autoref{tab:Sites}). Also, the spectral \gls{rrs} from all four algorithms were compared with coincident {\it in situ} data. This comparison showed that the \gls{mobelm} algorithm perform the best overall.  When compared with {\it in situ} data, the MoB-ELM and Gordon and Wang's algorithm from SeaDAS (SeaDAS-SWIR) show similar results for all bands (\autoref{fig:NRMSE130919_RRS}). The results from the Gordon and Wang's algorithm from Acolite (Acolite-SWIR) shows the largest disagreement (\autoref{fig:NRMSE130919_RRS}). Then, the \gls{nrmse} for each band was calculated using the {\it in situ} data from the 09-19-2013 scene. Again, the \gls{mobelm} algorithm performs the best overall.
 
-The study of coastal water includes an extra signal not taken into account in the remote sensing of the open ocean: adjacency effect product of the bright targets represented by the shoreline. This effect is not taken into account in the \cite{Gordon:1994} approach. However, it needs to be analyzed to know how much influence it could have in the sensor-reaching signal. Fortunately, the MoB-ELM algorithm inherently takes care of this signal since the reflectance values are taken at the surface and they represent ground-truth\todo{check!}.
+\todo{Dr.Schott: check this paragraph!}The study of coastal water includes an extra signal not taken into account in the remote sensing of the open ocean: adjacency effect product of the bright targets represented by the shoreline. This effect is not taken into account in the \cite{Gordon:1994} approach. However, it needs to be analyzed to know how much influence it could have in the sensor-reaching signal. Fortunately, the MoB-ELM algorithm inherently takes care of this signal since the reflectance values are taken at the surface and they represent ground-truth.
 
 % Glint and adjacency effects were also not addressed in this work, and they could affect the atmospheric correction.
 
