--- a/javier_bibPhD.bib
+++ b/javier_bibPhD.bib
@@ -2,12 +2,21 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Javier Concha First at 2015-10-27 19:04:59 -0400 
+%% Created for Javier Concha First at 2015-10-28 21:57:09 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@techreport{Berk:1989fk,
+	Author = {Berk, Alexander and Bernstein, Lawrence S. and Robertson, David C.},
+	Date-Added = {2015-10-29 01:52:42 +0000},
+	Date-Modified = {2015-10-29 01:57:07 +0000},
+	Institution = {Spectral Sciences, Inc.},
+	Title = {{MODTRAN: A Moderate Resolution Model for LOWTRAN 7}},
+	Type = {Report},
+	Year = {1989}}
 
 @electronic{OceanOpticsBook,
 	Date-Added = {2015-10-27 23:03:56 +0000},
@@ -83,8 +92,8 @@
 	Year = {1985},
 	Z8 = {19},
 	Z9 = {404},
-	ZB = {224},
-	ZS = {2}}
+	Zb = {224},
+	Zs = {2}}
 
 @techreport{Hojerslev1988,
 	Author = {H{\o}jerslev, N.K.},
@@ -1447,7 +1456,7 @@ The most interaction between humankind and water occurs in coastal and inland wa
 	Date-Modified = {2015-10-27 20:52:02 +0000},
 	Editor = {Stanford B. Hooker and Elaine R. FIrestone and James G. Acker},
 	Institution = {NASA},
-	Note = {NASA Technica Memorandum },
+	Note = {NASA Technica Memorandum},
 	Number = {104566, Vol. 25},
 	Rating = {0},
 	Read = {0},
