--- a/Appendix.tex
+++ b/Appendix.tex
@@ -341,7 +341,7 @@ SPM_{\displaystyle concentration} = \frac{[final~filter~weight~(mg) - tare~filte
 % &&&&&&&&&&&&&&&&&&
 
 % @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
-\chapter{HydroLight Specification}
+\chapter{Main Codes}
 
 
 \singlespacing
